really weird that its not working on small monitor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
-    <script src="sketch.js"></script>
+    <!-- <script src="sketch.js"></script> -->
+    <script src="03_needs_fixing/test.js"> </script>
 </body>
 </html>
