--- a/projects/01MainAssignments/project2/index.html
+++ b/projects/01MainAssignments/project2/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Sketch</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="99_libraries/p5.min.js"></script>
-    <script src="99_libraries/p5.sound.min.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
 </head>
 <body>
 
-    <script src="sketchNew.js"> </script>
+    <script src="sketch.js"> </script>
 </body>
 </html>
