--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Primary Meta Tags -->
-  <title>CC HS23 </title>
+  <title>CC HS24 </title>
   <meta name="title" content="BA Interaction Design : Creative Coding Portfolio" />
   <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -18,7 +18,7 @@
 <body>
    <!-- Student Name -->
   <section class="header-container">
-    <h2>Name Surname</h2>
+    <h2>Florian Kleiser</h2>
   </section>
 
   <!-- Projects -->
