--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
    <!-- Student Name -->
   <section class="header-container">
+    <!-- <h2>Name Surname</h2> -->
     <h2>Florian Kleiser</h2>
   </section>
 
