--- a/projects/01MainAssignments/project3/index.html
+++ b/projects/01MainAssignments/project3/index.html
@@ -10,6 +10,6 @@
 <body>
 
     <script src="sketch.js"> </script>
-    <script src="cursor.js"> </script>
+    <script src="Cursor.js"> </script>
 </body>
 </html>
