--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- *DO NOT CHANGE THIS FILE* -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,8 +20,7 @@
 <body>
    <!-- Student Name -->
   <section class="header-container">
-    <!-- <h2>Name Surname</h2> -->
-    <h2>Florian Kleiser</h2>
+    <h2>Name Surname</h2>
   </section>
 
   <!-- Projects -->
