--- a/projects/01MainAssignments/project4/index.html
+++ b/projects/01MainAssignments/project4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Microinteraction 2</title>
+    <title>Micro-Interaction 2</title>
     <link rel="stylesheet" href="styles.css">
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
